--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #4798c7;
             line-height: 1.6;
         }
         .container {
@@ -14,51 +14,57 @@
             overflow: hidden;
         }
         .main-info {
-            background: #333;
-            color: #fff;
+            background: #000000;
+            color: #ffffff;
             padding: 20px;
+            text-align: center; /* Center the image and text */
         }
         .main-info h1 {
             margin: 0;
         }
-        .hobbies, .lewis, .course, .job {
-            background: #e7e7e7;
+        .hobbies, .lewis, .course, .job, .fun-fact {
+            background: #563b94;
             padding: 15px;
             margin-bottom: 10px;
+        }
+        img {
+            width: 100%; /* Adjust the width as needed */
+            height: auto;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Your First and Last Name]</h1>
-            <h1>Preferred Name: [Your Preferred Name]</h1>
+            <img src="image-1.jpg" alt="Image">
+            <h1>Sami Alzoubi</h1>
+            <h1>Preferred Name: Sami or Sam</h1>
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [Your Years at Lewis]</h2>
-			<h2>Lewis major/minor/concentrations: [Your major/minor/concentrations]</h2>
-			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
+            <h2>Year at Lewis: Senior (4th year)</h2>
+            <h2>Lewis major/minor/concentrations: COMP SCI with a focus on Game Development</h2>
+            <h2>Reasons for pursuing this degree: Grow my game development company</h2>
         </section>
 
-		<section class="course">
+        <section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[Your reasons for taking this course]</p>
+            <p>Required course</p>
         </section>
 
-		<section class="job">
-            <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
-        </section>		
+        <section class="job">
+            <p>CEO of Sam's Development Studios</p>
+            <p>I own a game development studio that creates games for kids on a platform called ROBLOX</p>
+        </section>        
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+            <p>Running, Working out, playing videogames</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[A fun fact about yourself]</p>
+            <p>I lived in Dubai for 7 years</p>
         </section>
     </div>
 </body>
