--- a/index.html
+++ b/index.html
@@ -1,70 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>About Me</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me - Sami Alzoubi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #4798c7;
+            background-color: #f0f0f0;
+            color: #333;
             line-height: 1.6;
+            margin: 0;
+            padding: 0;
         }
         .container {
             width: 80%;
-            margin: auto;
+            margin: 20px auto;
             overflow: hidden;
-        }
-        .main-info {
-            background: #000000;
-            color: #ffffff;
+            background: #ffffff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
             padding: 20px;
-            text-align: center; /* Center the image and text */
         }
-        .main-info h1 {
-            margin: 0;
+        header {
+            text-align: center;
+            padding: 20px;
+            background-color: #563b94;
+            color: #ffffff;
+            border-radius: 8px 8px 0 0;
         }
-        .hobbies, .lewis, .course, .job, .fun-fact {
-            background: #563b94;
-            padding: 15px;
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
             margin-bottom: 10px;
         }
-        img {
-            width: 100%; /* Adjust the width as needed */
-            height: auto;
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+        header h2 {
+            margin: 0;
+            font-weight: normal;
+            font-size: 1.2em;
+        }
+        section {
+            margin: 20px 0;
+        }
+        h2 {
+            color: #563b94;
+            border-bottom: 2px solid #563b94;
+            padding-bottom: 5px;
+            margin-bottom: 10px;
+        }
+        p, li {
+            font-size: 1em;
+            margin: 10px 0;
+        }
+        .email, .discord {
+            font-size: 1.2em;
+        }
+        .hobbies ul {
+            list-style-type: square;
+            padding-left: 20px;
+        }
+        a {
+            color: #563b94;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <header class="main-info">
-            <img src="image-1.jpg" alt="Image">
+        <header>
+            <img src="me.png" alt="Sami Alzoubi">
             <h1>Sami Alzoubi</h1>
-            <h1>Preferred Name: Sami or Sam</h1>
+            <h2>Preferred Name: Sami or Sam</h2>
+            <p class="email"><a href="mailto:sami.alzoubi@lewisu.edu">sami.alzoubi@lewisu.edu</a></p>
+            <p class="discord">Discord: Sam#1234</p>
         </header>
 
-        <section class="lewis">
-            <h2>Year at Lewis: Senior (4th year)</h2>
-            <h2>Lewis major/minor/concentrations: COMP SCI with a focus on Game Development</h2>
-            <h2>Reasons for pursuing this degree: Grow my game development company</h2>
+        <section class="introduction">
+            <h2>Introduction</h2>
+            <p>Hello! I'm Sami, currently in my senior year at Lewis University, majoring in Computer Science with a focus on Game Development. My passion for game development led me to start my own company, Sam's Development Studios, where I create engaging games for children on the ROBLOX platform.</p>
+            <p>Outside of academics and work, I enjoy spending time with my family and pursuing my hobbies.</p>
         </section>
 
         <section class="course">
-            <h2>Reasons for Taking This Course</h2>
-            <p>Required course</p>
+            <h2>What I Hope to Learn in this Course</h2>
+            <ul>
+                <li>Advanced HTML and CSS Techniques</li>
+                <li>JavaScript Programming</li>
+                <li>Responsive Web Design</li>
+                <li>Version Control with Git and GitHub</li>
+            </ul>
         </section>
 
-        <section class="job">
-            <p>CEO of Sam's Development Studios</p>
-            <p>I own a game development studio that creates games for kids on a platform called ROBLOX</p>
-        </section>        
-
         <section class="hobbies">
-            <h2>Hobbies and Special Interests</h2>
-            <p>Running, Working out, playing videogames</p>
+            <h2>My Favorite Hobby / Activity</h2>
+            <ul>
+                <li>Running</li>
+                <li>Working out</li>
+                <li>Playing video games</li>
+            </ul>
+            <p>You can learn more about one of my favorite hobbies, running, <a href="https://www.runnersworld.com/" target="_blank">here</a>.</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>I lived in Dubai for 7 years</p>
+            <p>A fun fact about me is that I lived in Dubai for 7 years, which gave me a unique cultural experience and an appreciation for diversity.</p>
         </section>
     </div>
 </body>
