--- a/index.html
+++ b/index.html
@@ -6,28 +6,26 @@
     <title>About Me - Sami Alzoubi</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
-            line-height: 1.6;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
+            color: #333;
         }
         .container {
             width: 80%;
             margin: 20px auto;
-            overflow: hidden;
-            background: #ffffff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            background-color: #fff;
             padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
         header {
             text-align: center;
             padding: 20px;
             background-color: #563b94;
-            color: #ffffff;
-            border-radius: 8px 8px 0 0;
+            color: #fff;
+            border-radius: 10px 10px 0 0;
         }
         header img {
             width: 150px;
@@ -37,11 +35,19 @@
         }
         header h1 {
             margin: 0;
-            font-size: 2em;
+            font-size: 2.5em;
         }
         header h2 {
+            font-size: 1.5em;
             margin: 0;
             font-weight: normal;
+        }
+        .contact-info {
+            margin: 10px 0;
+        }
+        .contact-info a {
+            color: #ffffff;
+            text-decoration: none;
             font-size: 1.2em;
         }
         section {
@@ -49,20 +55,20 @@
         }
         h2 {
             color: #563b94;
-            border-bottom: 2px solid #563b94;
-            padding-bottom: 5px;
+            font-size: 1.8em;
             margin-bottom: 10px;
+            border-bottom: 2px solid #563b94;
         }
-        p, li {
-            font-size: 1em;
+        p {
+            font-size: 1.1em;
             margin: 10px 0;
         }
-        .email, .discord {
-            font-size: 1.2em;
-        }
-        .hobbies ul {
+        ul {
             list-style-type: square;
             padding-left: 20px;
+        }
+        ul li {
+            margin-bottom: 10px;
         }
         a {
             color: #563b94;
@@ -79,14 +85,15 @@
             <img src="me.png" alt="Sami Alzoubi">
             <h1>Sami Alzoubi</h1>
             <h2>Preferred Name: Sami or Sam</h2>
-            <p class="email"><a href="mailto:sami.alzoubi@lewisu.edu">sami.alzoubi@lewisu.edu</a></p>
-            <p class="discord">Discord: Sam#1234</p>
+            <div class="contact-info">
+                <p><a href="mailto:sami.alzoubi@lewisu.edu">samialzoubi@lewisu.edu</a></p>
+                <p>Discord: strangersz</p>
+            </div>
         </header>
 
         <section class="introduction">
             <h2>Introduction</h2>
-            <p>Hello! I'm Sami, currently in my senior year at Lewis University, majoring in Computer Science with a focus on Game Development. My passion for game development led me to start my own company, Sam's Development Studios, where I create engaging games for children on the ROBLOX platform.</p>
-            <p>Outside of academics and work, I enjoy spending time with my family and pursuing my hobbies.</p>
+            <p>Hello! I'm Sami, currently a senior at Lewis University, majoring in Computer Science with a concentration in Game Development. I'm passionate about creating games and have started my own game development company called Sam's Development Studios. I love spending time with my family, working on new game ideas, and exploring new technologies.</p>
         </section>
 
         <section class="course">
@@ -106,12 +113,12 @@
                 <li>Working out</li>
                 <li>Playing video games</li>
             </ul>
-            <p>You can learn more about one of my favorite hobbies, running, <a href="https://www.runnersworld.com/" target="_blank">here</a>.</p>
+            <p>I really like living on the edge and doing anything that has a little danger to it"</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>A fun fact about me is that I lived in Dubai for 7 years, which gave me a unique cultural experience and an appreciation for diversity.</p>
+            <p>A unique fact about me is that I livedd in Dubai for 7 years. This experience gave me a deep appreciation for different cultures and global perspectives.</p>
         </section>
     </div>
 </body>
