improved style + new pic

--- a/index.html
+++ b/index.html
@@ -7,73 +7,76 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
-            color: #333;
+            background: linear-gradient(to bottom, #1e3a5f, #121212);
+            color: #ffffff;
         }
         .container {
             width: 80%;
             margin: 20px auto;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.1);
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
         header {
             text-align: center;
-            padding: 20px;
-            background-color: #563b94;
-            color: #fff;
+            padding: 30px 20px;
+            background-color: #122b44;
+            color: #ffffff;
             border-radius: 10px 10px 0 0;
         }
         header img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
+            width: 200px;
+            height: 200px;
+            border-radius: 10%;
             margin-bottom: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            object-fit: cover;
         }
         header h1 {
-            margin: 0;
             font-size: 2.5em;
+            margin: 10px 0;
         }
         header h2 {
             font-size: 1.5em;
-            margin: 0;
             font-weight: normal;
+            margin: 5px 0;
         }
         .contact-info {
-            margin: 10px 0;
+            margin: 15px 0;
+            font-size: 1.2em;
         }
         .contact-info a {
-            color: #ffffff;
+            color: #4ecdc4;
             text-decoration: none;
-            font-size: 1.2em;
+        }
+        .contact-info a:hover {
+            text-decoration: underline;
         }
         section {
             margin: 20px 0;
         }
         h2 {
-            color: #563b94;
+            color: #4ecdc4;
             font-size: 1.8em;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #563b94;
+            margin-bottom: 1-px;
+            border-bottom: 2px solid #4ecdc4;
         }
-        p {
+        p, ul {
             font-size: 1.2em;
-            margin: 10px 0;
             line-height: 1.6;
         }
         ul {
-            list-style-type: square;
+            list-style-type: disc;
             padding-left: 20px;
         }
         ul li {
             margin-bottom: 10px;
         }
         a {
-            color: #563b94;
+            color: #4ecdc4;
             text-decoration: none;
         }
         a:hover {
@@ -97,7 +100,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="me.png" alt="Sami">
+            <img src="sami.jpg" alt="Sami">
             <h1>Sami Alzoubi</h1>
             <h2>Preferred Name: Sami or Sam</h2>
             <div class="contact-info">
