fixed image problem

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="sami.jpg" alt="Sami">
+            <img src="samii.jpg" alt="Sami">
             <h1>Sami Alzoubi</h1>
             <h2>Preferred Name: Sami or Sam</h2>
             <div class="contact-info">
@@ -111,7 +111,7 @@
 
         <section class="introduction">
             <h2>Introduction</h2>
-            <p>Hello! I'm Sami, currently a senior at Lewis University, majoring in Computer Science with a concentration in Game Development. I'm passionate about creating games and have started my own game development company called Sam's Development Studios. I love spending time with my family, working on new game ideas, and working out.</p>
+            <p>Please ignore the picture, there was an error with my actual one so I'm using this for now. Hello! I'm Sami, currently a senior at Lewis University, majoring in Computer Science with a concentration in Game Development. I'm passionate about creating games and have started my own game development company called Sam's Development Studios. I love spending time with my family, working on new game ideas, and working out.</p>
         </section>
 
         <section class="course">
